frontend/src/index.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

/* width */
::-webkit-scrollbar {
  width: 7px;
  height: 10px;
}

/* Track */
::-webkit-scrollbar-track {
  background: #ffffff;
  border-radius: 5px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #e9eaee;
  border-radius: 5px;
}

/* Handle on hover */
::-webkit-scrollbar-thumb:hover {
  background: #7f8591;
  cursor: pointer;
}

input[type="number"]::-webkit-inner-spin-button,
input[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  margin: 0;
}

body {
  @apply font-Inter overflow-x-hidden;
}

.card {
  @apply rounded-lg shadow p-6 min-w-64 max-w-96 cursor-move;
}

.card-title {
  @apply font-bold ml-2.5 mr-5;
}

.card-desc {
  @apply text-gray-500 my-3;
}

.card-tag {
  @apply mr-2.5 px-2 rounded-lg;
}

.cell-node {
  @apply invisible group-hover:visible cursor-pointer w-3;
}

.show-cell-node {
  @apply hover:opacity-50 cursor-pointer w-3;
}

.card-ellipsis {
  @apply w-1 ml-auto cursor-pointer hover:opacity-50;
}

.cell-menu {
  @apply bg-white rounded shadow-sm border px-4 py-4 font-semibold;
}

.sidebar-input {
  @apply border-2 rounded-lg px-2 py-1 w-full focus:outline-none w-80 text-sm border-gray-100;
}

.sidebar-textarea {
  @apply border-2 rounded px-2 py-2 w-full focus:outline-none w-80 text-sm border-gray-100;
}

.x-button {
  @apply w-7 border-2 px-1.5 py-1 rounded-lg ml-auto cursor-pointer border-gray-100 h-fit hover:opacity-50;
}

.mini-cell-card {
  @apply bg-white rounded-lg shadow p-5 max-w-96 mb-7;
}

.response-tag {
  @apply px-2 py-0.5 rounded-lg bg-gray-100 w-fit ml-auto text-sm;
}

.response-tag-input {
  @apply px-2 py-0.5 rounded-lg bg-gray-100 w-fit ml-auto text-sm focus:outline-none font-semibold text-gray-800;
}

.square-button {
  @apply border-2 px-1.5 py-1 rounded-lg cursor-pointer border-gray-100 hover:opacity-50;
}

.dropdown-top {
  @apply border-2 px-1.5 py-1 rounded-lg cursor-pointer border-gray-100 hover:opacity-50 w-fit h-fit bg-white;
}

.dropdown-bottom {
  @apply border-2 rounded-lg cursor-pointer border-gray-100 w-fit h-fit bg-white;
}

.dropdown-top-padded {
  @apply border-2 px-2.5 py-1.5 rounded-lg cursor-pointer border-gray-100 hover:opacity-50 w-fit h-fit bg-white;
}

.dropdown-bottom-padded {
  @apply border-2 rounded-lg cursor-pointer border-gray-100 w-fit h-fit bg-white;
}

.empty-mini-cell {
  @apply bg-white rounded-lg border-4 border-dashed border-gray-100 p-5 max-w-96 h-32 mb-7;
}

.selection-cell-header {
  @apply font-bold;
}

.selection-cell-description {
  @apply text-gray-500 mt-2;
}

.selection-card {
  @apply bg-white rounded-lg shadow-md p-6 cursor-pointer min-w-64 max-w-96;
}

.selection-area {
  @apply space-y-5 overflow-y-scroll h-[100vh] pr-5 pl-1 pb-24;
}

.settings-header {
  @apply text-lg font-bold;
}

